# ChangeLog for media-sound/xnoise
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/xnoise/ChangeLog,v 1.25 2012/09/20 14:59:07 angelos Exp $

*xnoise-0.2.11 (20 Sep 2012)

  20 Sep 2012; Christoph Mende <angelos@gentoo.org> +xnoise-0.2.11.ebuild,
  -xnoise-0.2.5.ebuild:
  Version bump, remove old

*xnoise-0.2.10 (16 Sep 2012)

  16 Sep 2012; Christoph Mende <angelos@gentoo.org> +xnoise-0.2.10.ebuild,
  -xnoise-0.2.4.ebuild:
  Version bump, remove old

*xnoise-0.2.5 (16 Aug 2012)

  16 Aug 2012; Christoph Mende <angelos@gentoo.org> +xnoise-0.2.5.ebuild,
  -xnoise-0.2.2.ebuild, -xnoise-0.2.3.ebuild, xnoise-9999.ebuild:
  Version bump

*xnoise-0.2.4 (29 Jul 2012)

  29 Jul 2012; Christoph Mende <angelos@gentoo.org> +xnoise-0.2.4.ebuild,
  xnoise-9999.ebuild:
  Versio bump, update live ebuild

  16 Jul 2012; Christoph Mende <angelos@gentoo.org> -xnoise-0.1.30.ebuild,
  -xnoise-0.1.31.ebuild:
  Remove old

*xnoise-0.2.3 (12 Jul 2012)

  12 Jul 2012; Christoph Mende <angelos@gentoo.org> +xnoise-0.2.3.ebuild,
  xnoise-9999.ebuild:
  Version bump

*xnoise-0.2.2 (26 May 2012)

  26 May 2012; Christoph Mende <angelos@gentoo.org> +xnoise-0.2.2.ebuild,
  xnoise-9999.ebuild:
  Version bump

  05 May 2012; Michał Górny <mgorny@gentoo.org> xnoise-0.1.30.ebuild,
  xnoise-0.1.31.ebuild, xnoise-9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  23 Apr 2012; Michał Górny <mgorny@gentoo.org> xnoise-0.1.31.ebuild:
  Use mirror:// in SRC_URI.

*xnoise-0.1.31 (23 Mar 2012)

  23 Mar 2012; Christoph Mende <angelos@gentoo.org> +xnoise-0.1.31.ebuild,
  xnoise-9999.ebuild:
  Version bump, update live ebuild

*xnoise-0.1.30 (18 Dec 2011)

  18 Dec 2011; Christoph Mende <angelos@gentoo.org> +xnoise-0.1.30.ebuild,
  -files/xnoise-0.1.29-disable-deprecated.patch, -xnoise-0.1.28.ebuild,
  -xnoise-0.1.29.ebuild, metadata.xml, xnoise-9999.ebuild:
  Version bump, remove old

*xnoise-0.1.29 (14 Oct 2011)
