@@ -1,7 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST xnoise-0.2.10.tar.gz 2148202 SHA256 5254ce38e5d9c4d5406f61ad36cc19fdd8af63c2c29ec24e3361b96882e39e4f SHA512 8d8600168d083a8fbdd28a0f756cc9bbad6179b58b619eb8edb8e02f6c18d4a538b45968e1bb51d48067fb2d2bc158d8eca3812c6471098b200f6b3bb18e5de3 WHIRLPOOL 08830d9380a55f497ac8b3face9b92bae2dff031ccd27a6994f372a8d568f98a1fc7ad377e9aa3dcddae875c52f0f8315ab2afef827faa50e28a3070f3a93b75
 DIST xnoise-0.2.11.tar.gz 2177011 SHA256 4f2ad0806d57375744ffbdf23d265ccd9cf35f80f2d7b1b80d30dfebef6ff658 SHA512 ccc72755710eff64693020d8ea5a70d4f0d32071e33eb237cdd5da6a08e6ee207518b37e860f1f2bf52cb085eb7c7dacb498f568c6e88fa93991a958f2d4bec2 WHIRLPOOL 1a3e8d15e72520fec056330c54b2caea595c0abdc3724f5c8f24428d8e6a4c4c7953dbeaa0b2bd0c9486e95a0368c14abff521e953a25c128acce13ab16a2091
+DIST xnoise-0.2.13.tar.gz 2327493 SHA256 f7f5395a0a5da0ca4ec3a72b5fb71f1b4ccb4f379073d64926472ef74629fb04 SHA512 1255a9c001815acb120aa05cf9f6d1ac8d60f079e1c45d299ac08717e6c62234a0b44c277d8484e10172ec17c6ea2f79c5abb54fcf7d3ecd224dc7b1e97e3d67 WHIRLPOOL c2a00e5162f66fc6748923d517a461c532df39e11299be13b8428e51be5b85f382655cfb51751bea72e435f8cdcd8fe237131f9dbd6428a596624459607bff74
 EBUILD xnoise-0.2.10.ebuild 1580 SHA256 f9e529b2fc48ab676ef96203c599ecf9fcba7b940054489d69c66fb6f8927652 SHA512 abec2e10e71c5bfcc22f672a588639e87f34d6e9b404f077f31130305151b1bff9543120395b2d86cefa79f09775994f48867b86ee9e49ab12f2f112ff232b2d WHIRLPOOL a40bfcc442f9a321eb8b279385c1fe1e46ecd13bbc0b929079413299c2c79ab7a3ee605ce81f68e779c73385b75079f66b738080a8a30198b266d60a0eef6d99
 EBUILD xnoise-0.2.11.ebuild 1580 SHA256 163a4e23af97b27a24ed98203475a5e263510b77e4ab7a5b779004c206bc0a58 SHA512 7c477497dd63c659a2999646f8bd9fde8fbaf07062d891af5358788e9c90ec100d746458bf921f0427ae3de2c9e2499b789bb7b1060d8588234207a1f3f798b5 WHIRLPOOL d610c077ed73786c16698afc24176f34baaf2b3d0adac5fdfa07d5a75168598ae148658946f53c20be12f9919086ca3923db466f6b84dd40798bf8beed1452f3
+EBUILD xnoise-0.2.13.ebuild 1580 SHA256 26557165c17a6c4bc55472259fc6ac9923a76ea0abdf4b389e8dc6476af0854c SHA512 97447430f106155d2c0572d4466e7dfe45043c5d2573e65ed237b29b493f7bf3038169576e9ec86d53065f748862bc5165888c4a60f8f96b25f32799720bc09e WHIRLPOOL 3e789026b3cd234b47a933ef93d7c59da46d60d70b0237c3b7c8a9b2bae3908c7c7ae5737e76698389d1e57f4bc4a9b78c9345dc197d18b66f67a5e996922424
 EBUILD xnoise-9999.ebuild 1715 SHA256 276a86234b3be0360b8605f2e9208a655d476ab8e78f8b307c2e6949cd096b3a SHA512 7608ed70f1ec9b10abeab119288db6a0d667804131155e8c87f6833bb6d561441c4ebfc713ec5de1128d7ec07eb9f940a03dfe217d91d4907602c3e1a44adc89 WHIRLPOOL be6139d2f649c927242f52c37e6f887bb0e5835a460f12c71b86200ba345e0d079979208ecaaee5effe4d9aabb77524394817e4d4ebe3b6937d92754ab6a3c6b
-MISC ChangeLog 3954 SHA256 e0cd85d956f9d7a83e43c1b25eacbc8d91c4734dd3a6f97d75de27bf7583479f SHA512 ae00af8feb87d8f94ecec3ad2f27dabf46b641d04445c026af885e94d9ac486b20ec4fbe024e790fa3228e5c6c0d551a7963e2b3a8ef5bc71fd3f246333f01a1 WHIRLPOOL 5cb672f1f8428259787f5ac8a16e523552a718210353d1d2f6fa4aa00a1d8d5cc06345a08050a891e2e01ff4e2877924704058ee9500a62be5929b2c0a06e4f8
+MISC ChangeLog 4062 SHA256 2c750879a8346f502fddfcbf925a3fa251f88c706566deb1597ece4f17afb14b SHA512 3fcdb2aaf48caa39b5b238a4a49824280acea6d8a52b3170cb384d1327a21445d42942ad0247a9d121d36e793cb666f3677fd0a48d0012a395d3a597fdea9772 WHIRLPOOL 4ab40b1fc20f7e39cbd020576680c627c1001f2ab36e3cddce871fa1a942670a250d1c4e2afcf52c8494b258579cfbebc288932e136800fe04b5128956861654
 MISC metadata.xml 499 SHA256 0d1e2ccdcbfa875b737b6e0f985b2ed664df24af17219ad7a2c96dba90ce95ed SHA512 9b6b9fd594efdd27fcf7730b744421da01f244f42e718c868e3ae64a53dd096e181b9edd1b4a2606764b5ec885100192df4b45fd094e4b4d5b4433c213fbec93 WHIRLPOOL 3cc3d1f2cc97fcfc7045d662dba49ef3b394db24165cbafa1669f3f6ae8051e5baec2ca09046e75169ce90587697ed1dfe186af2517d1b4c716b31c34c0c601b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlDXdioACgkQmWq1bYTyC0NL5AEAyID6gHD3/h4mFhNTrDCySJlT
+x0TqZiBDOQtxjTAp6lQBAIQMLv5MFniEkbCDfV1Qofgufs9xt+lBTgWt0W9ftjRa
+=yrw2
+-----END PGP SIGNATURE-----
